--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <html>
 
-    <head>
-        <meta charset="UTF-8">
-        <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
-        <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
-        <script language="javascript" type="text/javascript" src="sketch.js"></script>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+    <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
+</head>
 
-    <body>
-        <h1> Linear regression with gradient descent</h1>
-        <p><i>Click to add point<i></p>
-    </body>
+<body>
+    <h1> Linear regression with gradient descent</h1>
+    <p><i>Click to add point<i></p>
+    <p id="m" style="display:inline">m = </p>
+    <p id="b" style="display:inline">b = </p>
+</body>
+
+<script language="javascript" type="text/javascript" src="sketch.js"></script>
 
 </html>
