--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <h1> Linear regression with gradient descent</h1>
     <p><i>Click to add point<i></p>
+        <div>
     <p id="m" style="display:inline">m = </p>
     <p id="b" style="display:inline">b = </p>
+        </div>
 </body>
 
 <script language="javascript" type="text/javascript" src="sketch.js"></script>
