--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1> Linear regression with gradient descent</h1>
-    <p><i>Click to add point<i></p>
+    <p><i>Click to add points<i></p>
         <div>
     <p id="m" style="display:inline">m = </p>
     <p id="b" style="display:inline">b = </p>
