--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
     <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
+    <link rel="stylesheet" href="/global.css">
 </head>
 
 <body>
     <h1> Linear regression with gradient descent</h1>
     <p><i>Click to add points<i></p>
-        <div>
-    <p id="m" style="display:inline">m = </p>
-    <p id="b" style="display:inline">b = </p>
-        </div>
+    <div>
+        <p id="m" style="display:inline">m = </p>
+        <p id="b" style="display:inline">b = </p>
+    </div>
 </body>
 
 <script language="javascript" type="text/javascript" src="sketch.js"></script>
